put endpoint docs
